--- a/index.html
+++ b/index.html
@@ -15,35 +15,32 @@
 
 <body>
     <header>
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <nav class="navbar navbar-default navbar-inverse" role="navigation">
-                    <!-- El logotipo y el icono que despliega el menú se agrupan
+        <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <!-- El logotipo y el icono que despliega el menú se agrupan
        para mostrarlos mejor en los dispositivos móviles -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                            <span class="sr-only">Desplegar navegación</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">Logo</a>
-                    </div>
-                    <!-- Agrupar los enlaces de navegación, los formularios y cualquier
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                        <span class="sr-only">Desplegar navegación</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Logo</a>
+                </div>
+                <!-- Agrupar los enlaces de navegación, los formularios y cualquier
        otro elemento que se pueda ocultar al minimizar la barra -->
-                    <div class="collapse navbar-collapse navbar-ex1-collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="active"><a href="#">Opcion 1</a></li>
-                            <li><a href="#">Opcion 2</a></li>
-                            <li><a href="#">Opcion 3</a></li>
-                            <li><a href="#">Opcion 4</a></li>
-                        </ul>
-                    </div>
-                </nav>
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Opcion 1</a></li>
+                        <li><a href="#">Opcion 2</a></li>
+                        <li><a href="#">Opcion 3</a></li>
+                        <li><a href="#">Opcion 4</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-2"></div>
+        </nav>
         </div>
     </header>
 </body>
