--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Rodb&b</title>
+    <title>RODb&b</title>
     <link rel="stylesheet" href="libs-external/bootstrap.min.css">
     <link rel="stylesheet" href="libs/index.css">
     <script src="libs-external/angular-ui-router.min.js"></script>
