--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>rODb&b</title>
+    <title>RodBnB</title>
     <link rel="stylesheet" href="libs-external/bootstrap.min.css">
     <link rel="stylesheet" href="libs/index.css">
     <script src="libs-external/angular-ui-router.min.js"></script>
@@ -43,6 +43,66 @@
         </nav>
         </div>
     </header>
+	<section class="imagen">
+		
+	</section>
+	
+	<section class="videito">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slider-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slider-to="1" class></li>
+				<li data-target="#myCarousel" data-slider-to="2" class></li>
+			</ol>
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+					<img src="http://res.cloudinary.com/dujpqi8rw/image/upload/v1443641504/WMI_version_1_ppfwkv.jpg" alt="First slide" class="first-slide" width="1350" height="350">
+				</div>
+				<div class="item">
+					<img src="http://res.cloudinary.com/dujpqi8rw/image/upload/v1443641516/CLJ_version_1_dynxd9.jpg" alt="Second slide" class="second-slide" width="1350" height="350">
+				</div>
+				<div class="item">
+					<img src="http://res.cloudinary.com/dujpqi8rw/image/upload/v1443641524/londres3_vomruk.jpg" alt="Third slide" class="third-slide" width="1350" height="350">
+				</div>
+				<a href="#myCarousel" class="left carousel-control" role="button" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
+						
+					</span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a href="#myCarousel" class="right carousel-control" role="button" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
+						
+					</span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+		</div>
+	</section>
+	<section class="textos">
+		<div class="container marketing">
+			<div class="row">
+				<div class="col-lg-4 dest1">
+					<!-- <img src="" alt="Generic placeholder image" class="img-responsive img-rounded" style="width:204px;height:auto"> -->
+					<img src="http://res.cloudinary.com/dujpqi8rw/image/upload/v1443632107/polderkamer_lgvilo.jpg" alt="Generic placeholder image" class="img-responsive img-rounded" style="width:204px;height:auto">
+					<h2>Subtítulo 1</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus adipisci sapiente impedit velit architecto illum. Fuga beatae sapiente cumque, doloremque quisquam. Facere excepturi magni ad vero deleniti, ut amet eaque.</p>
+				</div>
+				<div class="col-lg-4 dest2">
+					<img src="http://res.cloudinary.com/dujpqi8rw/image/upload/v1443632104/hab01_y01rld.jpg" alt="Generic placeholder image" class="img-responsive img-rounded" style="width:204px;height:auto">
+					<h2>Subtítulo 2</h2>
+					<p>
+						Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+					</p>
+				</div>
+				<div class="col-lg-4 dest3">
+					<img src="http://res.cloudinary.com/dujpqi8rw/image/upload/v1443632089/65121_m20090417_qpx_med_sbaoea.jpg" alt="Generic placeholder image" class="img-responsive img-rounded" style="width:204px;height:auto">
+					<h2>Subtítulo 3</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque veritatis in, optio laborum ratione tempora, placeat reiciendis officiis rerum saepe quia quibusdam quidem consequuntur mollitia voluptatibus consectetur eveniet. Molestiae, nemo.</p>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
