--- a/index.html
+++ b/index.html
@@ -82,20 +82,20 @@
 	<section class="textos">
 		<div class="container marketing">
 			<div class="row">
-				<div class="col-lg-4 dest1">
+				<div class="col-lg-4 dest">
 					<!-- <img src="" alt="Generic placeholder image" class="img-responsive img-rounded" style="width:204px;height:auto"> -->
 					<img src="http://res.cloudinary.com/dujpqi8rw/image/upload/v1443632107/polderkamer_lgvilo.jpg" alt="Generic placeholder image" class="img-responsive img-rounded" style="width:204px;height:auto">
 					<h2>Subtítulo 1</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus adipisci sapiente impedit velit architecto illum. Fuga beatae sapiente cumque, doloremque quisquam. Facere excepturi magni ad vero deleniti, ut amet eaque.</p>
 				</div>
-				<div class="col-lg-4 dest2">
+				<div class="col-lg-4 dest">
 					<img src="http://res.cloudinary.com/dujpqi8rw/image/upload/v1443632104/hab01_y01rld.jpg" alt="Generic placeholder image" class="img-responsive img-rounded" style="width:204px;height:auto">
 					<h2>Subtítulo 2</h2>
 					<p>
 						Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
 					</p>
 				</div>
-				<div class="col-lg-4 dest3">
+				<div class="col-lg-4 dest">
 					<img src="http://res.cloudinary.com/dujpqi8rw/image/upload/v1443632089/65121_m20090417_qpx_med_sbaoea.jpg" alt="Generic placeholder image" class="img-responsive img-rounded" style="width:204px;height:auto">
 					<h2>Subtítulo 3</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque veritatis in, optio laborum ratione tempora, placeat reiciendis officiis rerum saepe quia quibusdam quidem consequuntur mollitia voluptatibus consectetur eveniet. Molestiae, nemo.</p>
